samples/_failures_safe/1761203528_1395f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc194aff.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_fc194aff.c:139:9: error: expected expression at end of input
  139 |         if (
      |         ^~
./samples/SAFE/__tmp_fc194aff.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc194aff.c:139:9: error: expected declaration or statement at end of input
